--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    implementation project(':jaakrecog-fingerprint')
+
 }
 
 apply from: 'capacitor.build.gradle'
