--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
-        jcenter()
+      maven {
+        url "https://plugins.gradle.org/m2/"
+      }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath 'com.google.gms:google-services:4.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,7 +22,9 @@ apply from: "variables.gradle"
 allprojects {
     repositories {
         google()
-        jcenter()
+      maven {
+        url "https://plugins.gradle.org/m2/"
+      }
     }
 }
 
