--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,11 +7,13 @@ buildscript {
       maven {
         url "https://plugins.gradle.org/m2/"
       }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath 'com.google.gms:google-services:4.3.5'
-
+        classpath 'gradle.plugin.com.google.cloud.artifactregistry:artifactregistry-gradle-plugin:2.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
