--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fingerprintPluginUsage",
+  "name": "Finger Print Plugin Usage",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "JAAK-IT SAPI de CV",
+  "homepage": "https://jaakrecog.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,14 +22,14 @@
     "@angular/router": "~12.1.1",
     "@capacitor/android": "^3.2.0",
     "@capacitor/app": "1.0.2",
-    "@capacitor/core": "3.2.0",
+    "@capacitor/core": "^3.2.4",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^5.5.2",
     "bootstrap": "^5.1.0",
     "husky": "^7.0.2",
-    "jaakrecog-fingerprint": "file:../jaakrecog-fingerprint-capacitor",
+    "jaakrecog-fingerprint": "1.0.0-dev.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -67,5 +67,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
-  "description": "An Ionic project"
+  "description": "JAAKRecog Fingerprint plugin usage"
 }
