--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/android": "^3.2.0",
+    "@capacitor/android": "^3.2.4",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "^3.2.4",
     "@capacitor/haptics": "1.0.2",
+    "@capacitor/ios": "^3.2.4",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^5.5.2",
     "bootstrap": "^5.1.0",
     "husky": "^7.0.2",
-    "jaakrecog-fingerprint": "1.0.0-dev.13",
+    "jaakrecog-fingerprint": "^1.0.0-dev.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -44,7 +45,7 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.2.0",
+    "@capacitor/cli": "^3.2.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
