--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:jaak-it/jaakrecog-fingerprint-plugin-usage-example.git"
+  },
+   "scripts": {
+    "postinstall": "husky install"
+  },
   "dependencies": {
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
@@ -66,7 +73,22 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.2.4",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.2",
+    "husky": "^5.1.3",
+    "semantic-release": "^17.4.3",
+    "validate-branch-name": "^1.0.6"
+  },
+  "validate-branch-name": {
+    "pattern": "^(master|develop){1}$|^(release|feature|fix)/.+$",
+    "errorMsg": "Branch name invalid"
   },
   "description": "JAAKRecog Fingerprint plugin usage"
 }
