--- a/.github/workflows/generate_release.yml
+++ b/.github/workflows/generate_release.yml
@@ -42,7 +42,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_SEMANTIC_RELEASE }}
 
-  build:
+  build_android:
+    needs: release
     name: Build Android APK
     runs-on: ubuntu-latest
     steps:
@@ -52,14 +53,20 @@ jobs:
         with:
           fileName: 'keystore/jaakrecog.jks'
           encodedString: ${{ secrets.KEYSTORE }}
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+          fetch-depth: 0
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - name: Make gradlew executable
+        working-directory: android
         run: chmod +x ./gradlew
       - name: build prod
+        working-directory: android
         run: ./gradlew app:bundleRelease
         env:
           SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
@@ -69,7 +76,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Build Artifacts
-          path: app/build/outputs/
+          path: android/app/build/outputs/
 
 
 
