--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ android {
   }
   signingConfigs {
     release {
-      def tmpFilePath = "../work/_temp/keystore/"
+      def tmpFilePath = System.getProperty("user.home") + "/work/_temp/keystore/"
       def allFilesFromDir = new File(tmpFilePath).listFiles()
 
       if (allFilesFromDir != null) {
