--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Finger Print Plugin Usage",
+  "name": "jaakrecog-fingerprint-plugin-usage",
   "version": "0.0.1",
   "author": "JAAK-IT SAPI de CV",
   "homepage": "https://jaakrecog.com/",
@@ -9,15 +9,13 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "husky install"
   },
   "private": true,
   "repository": {
     "type": "git",
     "url": "git@github.com:jaak-it/jaakrecog-fingerprint-plugin-usage-example.git"
-  },
-   "scripts": {
-    "postinstall": "husky install"
   },
   "dependencies": {
     "@angular/common": "~12.1.1",
@@ -85,6 +83,7 @@
     "husky": "^5.1.3",
     "semantic-release": "^17.4.3",
     "validate-branch-name": "^1.0.6"
+
   },
   "validate-branch-name": {
     "pattern": "^(master|develop){1}$|^(release|feature|fix)/.+$",
