feat: add sentry monitoring

--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -14,5 +14,8 @@ project(':capacitor-keyboard').projectDir = new File('../node_modules/@capacitor
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacitor/status-bar/android')
 
+include ':sentry-capacitor'
+project(':sentry-capacitor').projectDir = new File('../node_modules/@sentry/capacitor/android')
+
 include ':jaakrecog-fingerprint'
 project(':jaakrecog-fingerprint').projectDir = new File('../node_modules/jaakrecog-fingerprint/android')
