fix(gradle):Adding path to new nexus repository

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
 repositories {
   mavenCentral()
   maven {
-    url "https://devtools.jaakrecog.com/repository/jaakrecog/"
+    url "https://devtools.jaakrecog.com/repository/com.jaakit.fingeracquisition/"
   }
 
 }
