--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -18,4 +18,4 @@ include ':sentry-capacitor'
 project(':sentry-capacitor').projectDir = new File('../node_modules/@sentry/capacitor/android')
 
 include ':jaakrecog-fingerprint'
-project(':jaakrecog-fingerprint').projectDir = new File('../node_modules/jaakrecog-fingerprint/android')
+project(':jaakrecog-fingerprint').projectDir = new File('../../jaakrecog-fingerprint-capacitor/android')
