fix(gradle):fix remove old maven config

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,9 +21,10 @@ apply from: "variables.gradle"
 allprojects {
     repositories {
         google()
-      maven {
-        url "https://plugins.gradle.org/m2/"
-      }
+        maven {
+          url "https://devtools.jaakrecog.com/repository/com.jaakit.fingeracquisition/"
+        }
+
     }
 }
 
