--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,7 @@ apply from: "variables.gradle"
 allprojects {
     repositories {
         google()
+        jcenter()
         maven {
           url "https://devtools.jaakrecog.com/repository/com.jaakit.fingeracquisition/"
         }
